cluster/apps/external-services/graylog/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app graylog
  namespace: external-services
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
spec:
  type: ExternalName
  externalName: graylog.${SECRET_PRIVATE_DOMAIN}.
  ports:
    - name: graylog-http
      port: 9000
      protocol: TCP
      targetPort: 9000
