cluster/apps/external-services/graylog/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app graylog
  namespace: external-services
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/enable: "true"
    hajimari.io/icon: "file-document-multiple"
    hajimari.io/group: "monitoring"
spec:
  ingressClassName: "nginx"
  rules:
    - host: &host "graylog.${SECRET_PUBLIC_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 9000
  tls:
    - hosts:
        - *host
      secretName: graylog-tls
